Deployment-nginx-1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  annotations:
    kubernetes.io/change-cause: ver1
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nginx-deployment
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-deployment
        svc: example
    spec:
      containers:
        - name: nginx-deployment
          image: repo.local/nginx
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
      imagePullSecrets:
          - name: repo.local
