busy-cpu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-deployment
  annotations:
    kubernetes.io/change-cause: ver1
spec:
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: busybox-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: busybox-deployment
        svc: example
    spec:
      containers:
        - name: busybox-deployment
          image: busybox
          imagePullPolicy: IfNotPresent
          command: ["dd", "if=/dev/zero", "of=/dev/null"]
          # ports:
          #   - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
      # imagePullSecrets:
      #     - name: repo.local
