pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine
  labels:
    run: nfs
spec:
  containers:
    - name: alpine
      image: alpine:latest
      imagePullPolicy: IfNotPresent
      command: ["sleep","999d"]
