ClusterIP-1.yml
kind: Service
apiVersion: v1
metadata:
  name: sampleweb1
spec:
  selector:
    tier: frontend
  type: ClusterIP
  ports:
    - port: 82
      targetPort: 8080
