NodePort-1.yml
kind: Service
apiVersion: v1
metadata:
  name: sampleweb
spec:
  selector:
    tier: frontend
  type: NodePort
  ports:
    - port: 82
      #destination port
      targetPort: 8080
      targetPort: nginx-port
